--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@
   flex-direction: column;
   gap: 32px;
   font-weight: bold;
+  cursor: pointer;
 }
 .button-menu__button_repair {
   position: relative;
@@ -110,6 +111,7 @@
   background-color: inherit;
   border: none;
   font-weight: bold;
+  cursor: pointer;
 }
 .mobile-menu__button_language {
   display: flex;
